--- a/AzureFunctions.Extensions.GooglePubSub.DemoProject2/AzureFunctions.Extensions.GooglePubSub.DemoProject2.csproj
+++ b/AzureFunctions.Extensions.GooglePubSub.DemoProject2/AzureFunctions.Extensions.GooglePubSub.DemoProject2.csproj
@@ -10,6 +10,9 @@
     <ProjectReference Include="..\AzureFunctions.Extensions.GooglePubSub\AzureFunctions.Extensions.GooglePubSub.csproj" />
   </ItemGroup>
   <ItemGroup>
+    <None Update="credentials.json">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </None>
     <None Update="host.json">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </None>
