--- a/AzureFunctions.Extensions.GooglePubSub/AzureFunctions.Extensions.GooglePubSub.csproj
+++ b/AzureFunctions.Extensions.GooglePubSub/AzureFunctions.Extensions.GooglePubSub.csproj
@@ -2,10 +2,10 @@
 
   <PropertyGroup>
     <TargetFramework>netstandard2.0</TargetFramework>
-    <Version>1.0.0</Version>
+    <Version>1.0.1-beta1</Version>
     <GeneratePackageOnBuild>true</GeneratePackageOnBuild>
-    <AssemblyVersion>1.0.0</AssemblyVersion>
-    <FileVersion>1.0.0</FileVersion>
+    <AssemblyVersion>1.0.1</AssemblyVersion>
+    <FileVersion>1.0.1</FileVersion>
     <Authors>Damiao Castro</Authors>
     <Company>fowet.com</Company>
     <Product>AzureFunctions.Extensions.GooglePubSub</Product>
