--- a/AzureFunctions.Extensions.GooglePubSub/AzureFunctions.Extensions.GooglePubSub.csproj
+++ b/AzureFunctions.Extensions.GooglePubSub/AzureFunctions.Extensions.GooglePubSub.csproj
@@ -2,10 +2,10 @@
 
   <PropertyGroup>
     <TargetFramework>netstandard2.0</TargetFramework>
-    <Version>1.0.1-beta1</Version>
+    <Version>1.0.2</Version>
     <GeneratePackageOnBuild>true</GeneratePackageOnBuild>
-    <AssemblyVersion>1.0.1</AssemblyVersion>
-    <FileVersion>1.0.1</FileVersion>
+    <AssemblyVersion>1.0.2</AssemblyVersion>
+    <FileVersion>1.0.2</FileVersion>
     <Authors>Damiao Castro</Authors>
     <Company>fowet.com</Company>
     <Product>AzureFunctions.Extensions.GooglePubSub</Product>
@@ -15,8 +15,14 @@ If this package was done by Microsoft itself would be under the namespace "Micro
   </PropertyGroup>
 
   <ItemGroup>
-    <PackageReference Include="Google.Apis.Auth" Version="1.32.1" />
-    <PackageReference Include="Microsoft.Azure.WebJobs.Extensions" Version="3.0.0-beta4" />
+    <Compile Remove="PubSub\**" />
+    <EmbeddedResource Remove="PubSub\**" />
+    <None Remove="PubSub\**" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <PackageReference Include="Microsoft.Azure.WebJobs.Extensions" Version="3.0.0-beta5" />
+    <PackageReference Include="TransparentApiClient.Google.PubSub.V1" Version="0.0.2" />
   </ItemGroup>
 
 </Project>
