--- a/AzureFunctions.Extensions.GooglePubSub/AzureFunctions.Extensions.GooglePubSub.csproj
+++ b/AzureFunctions.Extensions.GooglePubSub/AzureFunctions.Extensions.GooglePubSub.csproj
@@ -30,8 +30,11 @@ If this package was done by Microsoft itself would be under the namespace "Micro
   </ItemGroup>
 
   <ItemGroup>
-    <PackageReference Include="Microsoft.Azure.WebJobs.Extensions" Version="3.0.1" />
-    <PackageReference Include="TransparentApiClient.Google.PubSub.V1" Version="0.0.4" />
+    <PackageReference Include="Microsoft.Azure.WebJobs.Extensions" Version="3.0.2" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <ProjectReference Include="..\..\TransparentApiClient.Google\TransparentApiClient.Google.PubSub.V1\TransparentApiClient.Google.PubSub.V1.csproj" />
   </ItemGroup>
 
 </Project>
